2010-08-27  Per Bothner  <per@bothner.com>

	* classes-to-skip-for-runtime: Add some new classes.

2010-08-26  Per Bothner  <per@bothner.com>

	Replace ExpWalker expression-visitor API by new ExpVisitor.
	Lots of little changes; a few big ones - see gnu/expr/ChangeLog.

2010-07-23  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.10.
	* build.xml (version.release): Likewise.

2010-07-19  Per Bothner  <per@bothner.com>

	* build.xml: Pass +enable:XML or -enable:XML to PreProcess as needed.

	* build.xml (slib-scm): Include srfi13.scm.

2010-05-24  Per Bothner  <per@bothner.com>

	* Makefile.am (PREPROCESS_XML): New mecro.
	(USE_HTTPSERVER): Rename to PREPROCESS_HTTPSERVER.
	(do-preprocess): Use new macros.

2010-05-19  Per Bothner  <per@bothner.com>

	* configure, aclocal.m4, **/Makefile.in: Re-generate.

2010-04-19  Per Bothner  <per@bothner.com>

	* build.xml: Update to auto-select Java5 and Java6, including
	HttpServer.

2010-04-18  Per Bothner  <per@bothner.com>

	Add support for using the com.sun.net.httpserver web server.
	* configure.in(--with-httpserver): New option.
	(WITH_HTTPSERVER): New conditional.
	* Makefile.am: Conditionalize pre-processing on WITH_HTTPSERVER.

2010-04-10  Per Bothner  <per@bothner.com>

	* configure.in: New --java-source option '6compat5': Compile assuming
	a Java 6 compiler, but so .jar (with most features) can run on Java5.
	This implies compiling with -target 1.5.
	* Makefile.am: Various fixes for 'distclean'.
	(dist-kawa-@VERSION@.jar): Build --with-java-source=6compat5.

2010-01-07  Per Bothner  <per@bothner.com>

	* **/Makefile.in, aclocal.m4: Regenerate using automake 1.11.1.

2009-08-31  Per Bothner  <per@bothner.com>

	* Makefile.am (kawart-@VERSION@.jar): Add missing $(srcdir).

2009-08-27  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm): Update for new source files.

	* Makefile.am (all): Also build kawart-@VERSION@.jar.

2009-08-27  Per Bothner  <per@bothner.com>
