@@ -79,7 +79,7 @@ case "/${with_java_source}/" in
   /5/) JAVA_SOURCE=5 ;;
   /6/) JAVA_SOURCE=6 ;;
   /6compat5/) JAVA_SOURCE=6compat5 ;;
-  /7/) JAVA_SOURCE=6 ;;
+  /7/) JAVA_SOURCE=7 ;;
   /1.1*/) JAVA_SOURCE=1 ;;
   /1.2*/) JAVA_SOURCE=2 ;;
   /1.3*/) JAVA_SOURCE=2 ;;
@@ -88,7 +88,7 @@ case "/${with_java_source}/" in
   /gcj4/) JAVA_SOURCE=4x ;;
   /1.5*/) JAVA_SOURCE=5 ;;
   /1.6*/) JAVA_SOURCE=6 ;;
-  /1.7*/) JAVA_SOURCE=6 ;;
+  /1.7*/) JAVA_SOURCE=7 ;;
   /android*/)
         JAVA_SOURCE=android
         test -z "$with_swing" && with_swing="no"
