@@ -1,3 +1,9 @@
+2010-08-28  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (select-java7, selected-java-source):
+	Add missing jdk7 support.
+	* configure.in: Map --with-jave-source to JAVA_SOURCE=7 - not 6.
+
 2010-08-27  Per Bothner  <per@bothner.com>
 
 	* classes-to-skip-for-runtime: Add some new classes.
